--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,80 +1,105 @@
 /*FONTS: font-family: 'Oswald', sans-serif;
 
 /*VARS*/
-$orange : #d6391e;
-$purple : #513367;
+
+$orange: #d6391e;
+$purple: #513367;
 
 /*MIXINS*/
 
-@mixin hover{
-    opacity:0.5;
-    cursor:pointer;
-    transition:0.3s;
+@mixin hover {
+    opacity: 0.5;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-@mixin input{
-    border-radius:4px;
-    border:1px solid black;
-    margin-top:10px;
-    padding:8px;
-    padding-left:40px;
-    padding-right:100px;
-    position:relative;
-    color:silver;
-    font-weight:lighter;
+@mixin image-center {
+    display: block;
+    margin: 0 auto;
+}
+
+@mixin input {
+    border-radius: 4px;
+    border: 1px solid black;
+    margin-top: 10px;
+    padding: 8px;
+    padding-left: 40px;
+    padding-right: 100px;
+    position: relative;
+    color: silver;
+    font-weight: lighter;
 }
 
 /* RESET */
-*{
-    padding:0;
-    margin:0;
-    box-sizing:border-box;
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 /* GERAL */
 
-body{
+body {
     font-family: 'Oswald', sans-serif;
+    position: relative;
 }
 
 /*HEADER*/
 
-header{
-    padding:2rem 0;
-    h1{
-        color:$orange;
-        text-transform: uppercase;
-        margin-bottom:0;
+header {
+    padding: 2rem 0;
+    .icon-menu {
+        color: $purple;
+        font-size: 40px;
+
     }
-    .h1-span{
-        color:$purple;
-        font-style:italic;
-        margin-left:54px;
-        font-weight:lighter;
+
+    .icon-menu:hover {
+        @include hover;
     }
-    input{
+
+    img.logo:hover {
+        @include hover;
+    }
+
+    img.logo {
+        @include image-center;
+    }
+
+    input {
         @include input;
     }
-    button{
-        background:none;
-        border:none;
-        position:absolute;
-        top:18px;
-        left:30px;
-        cursor:pointer;
-        svg{
-            color:$orange;
+
+    .bag span {
+        margin-left: 12px;
+    }
+
+    .bag img {
+        width: 39px;
+        height: 42px;
+    }
+
+    button {
+        background: none;
+        border: none;
+        position: absolute;
+        top: 18px;
+        left: 30px;
+        cursor: pointer;
+        .icon-magnifier {
+            color: $orange;
         }
     }
-    .order{
-        margin-top:10px;
-        h2{
-            font-style:italic;
-            color:$orange;
-            font-size:18px;
-            font-weight:lighter;
-            span{
-                font-size:14px;
+    .order {
+        margin-top: 10px;
+        h2 {
+            font-style: italic;
+            color: $orange;
+            font-size: 18px;
+            font-weight: lighter;
+            span {
+                font-size: 14px;
             }
         }
     }
@@ -82,118 +107,336 @@ header{
 
 /*NAV*/
 
-nav{
-    background:$purple;
-    color:white;
-    font-style:italic;
-    padding:10px;
-    ul{
-        list-style:none;
-        margin:0;
-        li{
-            margin-right:1rem;
-            padding:10px 14px;
+nav {
+    background: $purple;
+    color: white;
+    font-style: italic;
+    padding: 10px;
+    ul {
+        list-style: none;
+        margin: 0;
+        li {
+            margin-right: 1rem;
+            padding: 10px 14px;
         }
     }
-    a{
-        color:white;
-        }
-        a:hover{
-            @include hover;
-            color:white;
-            
-        }
-    span{
-        margin:0 10px;
-        opacity:0.4;
+    a {
+        color: white;
     }
-    
-    .active{
-        background:#422a53;
-        border-radius:3px;
+    a:hover {
+        @include hover;
+        color: white;
+
     }
-    svg{
-        margin-left:5px;
-        margin-bottom:2px;
+    span {
+        margin: 0 10px;
+        opacity: 0.4;
+    }
+
+    .active {
+        background: #422a53;
+        border-radius: 3px;
+    }
+    .icon-arrow-down {
+        margin-left: 5px;
+        margin-bottom: 2px;
     }
 }
 
 /*POTIONS*/
 
-.potions{
-    span{
-        font-weight:lighter;
-        color:$orange;
+.potions {
+    span {
+        font-weight: lighter;
+        color: $orange;
     }
-    
-    img{
-        width:60%;
-        display:block;
-        margin:0 auto;
+
+    img {
+        width: 60%;
+        @include image-center;
     }
-    
-    img:hover{
-        @include hover;    
+
+    img:hover {
+        @include hover;
     }
 }
 
 /*FOOTER*/
 
-footer{
-    background:#e6e6e6;
-    padding:2rem 0;
-    
-    ul{
-        list-style:none;
-        li{
+footer {
+    background: #e6e6e6;
+    padding: 2rem 0;
+    ul {
+        list-style: none;
+        li {
             line-height: 1;
         }
     }
-    
-    .links{
-        a{
-            color:$orange;
-            font-size:24px;
+
+    .links {
+        a {
+            color: $orange;
+            font-size: 24px;
         }
-        li{
-            margin-right:50px;
+        li {
+            margin-right: 50px;
         }
     }
-    
-    svg{
-        background:$purple;
-        border-radius:50% 50%;
-        font-size:50px !important;
-        padding:20px;
-        
+
+    svg {
+        background: $purple;
+        border-radius: 50% 50%;
+        font-size: 50px !important;
+        padding: 20px;
+
     }
-    img:hover{
+    img:hover {
         @include hover;
     }
-    
-    .social{
-        li{
-            margin-right:25px;
+
+    .social {
+        li {
+            margin-right: 25px;
         }
     }
-    input[type="email"]{
-        border-radius:4px;
-        border:1px solid black;
-        margin-top:10px;
-        padding:8px;
-        padding-right:100px;
-        font-weight:lighter;
+    input[type="email"],
+    input[type="submit"] {
+        width: 100%;
+        padding: 8px;
     }
-    
-    input[type="submit"]{
-        background:$orange;
-        border:none;
-        color:white;
-        padding:8px 30px;
-        margin-left:10px;
+
+    input[type="email"] {
+        border-radius: 4px;
+        border: 1px solid black;
+        font-weight: lighter;
+
     }
-    input[type="submit"]:hover{
+
+    input[type="submit"] {
+        background: $orange;
+        border: none;
+        color: white;
+    }
+    input[type="submit"]:hover {
+        @include hover;
+    }
+    form {
+        .col-md-8,
+        .col-md-4 {
+            padding: 0 5px;
+        }
+    }
+
+    .copy {
+        color: grey;
+        margin-top: 50px;
+    }
+}
+
+/*LIGHTBOX*/
+
+.lightbox {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 2;
+    h2 {
+        font-size: 18px;
+    }
+    .content {
+        margin-top: 50px !important;
+        background: white;
+        width: 50%;
+        @include image-center;
+        padding: 2rem;
+        position: relative;
+    }
+    .icon-close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+    }
+    .icon-close:hover {
+        @include hover;
+    }
+    p {
+        font-weight: lighter;
+        margin: 0;
+    }
+    span {
+        color: $orange;
+    }
+    button {
+        display: block;
+        background: $orange;
+        color: white;
+        border: none;
+        padding: 8px;
+    }
+
+    button:hover {
         @include hover;
     }
 }
 
+/*DROP MOBILE MENU*/
+
+.drop-mobile {
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    width: 100%;
+    ul {
+        margin: 0;
+    }
+    > div {
+        padding: 1.5rem;
+        background: white;
+        form {
+            position: relative;
+            input {
+                border-radius: 4px;
+                border: 1px solid black;
+                padding: 8px;
+                padding-left: 30px;
+                font-weight: lighter;
+                width: 100%;
+            }
+        }
+        .icon-close {
+            font-size: 40px;
+            color: $purple;
+        }
+
+        .icon-close:hover {
+            @include hover;
+        }
+
+        button {
+            background: none;
+            border: none;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            cursor: pointer;
+            .icon-magnifier {
+                color: $orange;
+            }
+        }
+    }
+    ul {
+        background: $purple;
+        font-style: italic;
+        list-style: none;
+        font-weight: lighter;
+        li {
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        }
+        a{
+            color:white;
+        }
+    }
+    > ul {
+            a {
+                color: white;
+                padding-left: 50px;
+                display: block;
+                padding-top: 8px;
+                padding-bottom: 8px;
+            }
+            a:hover {
+                text-decoration: none;
+                background: #422a53;
+            }
+            .active {
+                background: #422a53;
+                border-radius: 3px;
+            }
+        }
+}
+
+/*MEDIA QUERY*/
+
+@media screen and (max-width:1206px) {
+    nav {
+        ul {
+            li {
+                font-size: 12px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:768px) {
+    img.logo {
+        margin-top: 0 !important;
+    }
+    footer {}
+    footer {
+        .copy {
+            margin: 0;
+        }
+    }
+    .potions {
+        img {
+            width: 100%;
+        }
+        p,
+        span {
+            font-size: 10px;
+        }
+    }
+
+}
+
+@media screen and (max-width:992px) {
+    header {
+        padding: 1rem;
+    }
+    img.logo {
+        margin-top: 10px !important;
+    }
+    .bag span {
+        margin-left: 0 !important;
+        font-size: 10px;
+    }
+    .lightbox {
+        .content {
+            width: 80%;
+        }
+    }
+}
+
+@media screen and (max-width:576px) {
+    .lightbox {
+        .content {
+            img {
+                width: 40% !important;
+            }
+            button {
+                display: block;
+                margin: 0 auto;
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width:452px) {
+    header {
+        img.logo {
+            width: 150px;
+        }
+    }
+}
+
+@media screen and (min-width:452px) {
+    header {
+        .fa-bars,
+        .bag {
+            margin-top: 20px;
+        }
+    }
+}
