--- a/index.pug
+++ b/index.pug
@@ -3,6 +3,7 @@ head
     title Merlin's Potions
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    link(rel="shortcut icon" href="img/products/aging-potion.png")
     link(href="https://fonts.googleapis.com/css?family=Oswald:200,500" rel="stylesheet")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css")
     link(rel="stylesheet" href="css/bootstrap.min.css")
@@ -200,7 +201,7 @@ body
                                     input.rounded.button(type="submit" value="submit")
                                     
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")                                
-    script(src="js/script.js")
+    script(src="js/script.min.js")
     
     
     
