--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,5 +1,3 @@
-/*FONTS: font-family: 'Oswald', sans-serif;
-
 /*VARS*/
 
 $orange: #d6391e;
@@ -10,6 +8,8 @@ $purple: #513367;
 @mixin hover {
     opacity: 0.5;
     cursor: pointer;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
     transition: 0.3s;
 }
 
@@ -35,7 +35,8 @@ $purple: #513367;
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 /* GERAL */
@@ -158,6 +159,10 @@ nav {
 
     img:hover {
         @include hover;
+    }
+    
+    .price{
+        color:$orange;
     }
 }
 
