--- a/index.pug
+++ b/index.pug
@@ -18,7 +18,7 @@ body
                     img#image.img-fluid.d-block.mx-auto(src="img/products/aging-potion.png" alt="produto")
                 .col-sm-4
                     h2 sdsa 
-                    h2 Use/Effect:
+                    h2.effect Use/Effect:
                     p ${effect}
                     h2 
                     h2 igredients
@@ -94,19 +94,14 @@ body
                     ul.d-flex
                         li 
                             a(href="#") Potions
-                            i.icon-arrow-down
                         li 
                             a(href="#") Inredients
-                            i.icon-arrow-down
                         li 
                             a(href="#") Books
-                            i.icon-arrow-down
                         li 
                             a(href="#") Supplies
-                            i.icon-arrow-down
                         li 
                             a(href="#") Charms
-                            i.icon-arrow-down
                         li.active 
                             a(href="#") Clearence!
                 .col-md-4.d-flex.justify-content-center
@@ -201,7 +196,7 @@ body
                                     input.rounded.button(type="submit" value="submit")
                                     
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js")                                
-    script(src="js/script.min.js")
+    script(src="js/script.js")
     
     
     
